fixup! (#1956) fix for footer icons clipping at top

--- a/docroot/profiles/custom/cgov_site/themes/custom/cgov/src/styles/_footer.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/cgov/src/styles/_footer.scss
@@ -98,6 +98,10 @@
   }
 
   .icon {
+    &::before {
+      content: '';
+      vertical-align: top;
+    }
 
     &.facebook {
       &::before {
